updated th index page

--- a/index.html
+++ b/index.html
@@ -116,10 +116,11 @@
               <article class="project">
                 <div class="meta">
                   <h3>Opay Website</h3>
-                  <p class="muted">Multi-page opay site used to inform customers about their services. Deployed on Netlify.   <br><a href="https://zubairacademy.netlify.app" target="_blank">Live</a> • <a href="https://zubairacademy" target=_blank">Source</a></p>
+                  <p class="muted">Multi-page opay site used to inform customers about their services. Deployed on Netlify.   <br><a href="https://opayzubair.netlify.app" target="_blank">Live</a> • <a href="https://zubairacademy" target="_blank">Source</a></p>
                 </div>
                 <div style="min-width:94px;text-align:right;color:var(--muted)">HTML • CSS</div>
               </article>
+
 
             </div>
           </div>
@@ -149,7 +150,7 @@
             <div style="font-weight:700">Zubayr A. Omodolapo</div>
             <div class="muted" style="font-size:13px">Frontend Developer</div>
             <div style="margin-top:10px">
-              <a href="mailto:abdulmujibzubair@gmail.com" class="btn-ghost">Email</a>
+              <a href="mailto:zubayrtechhub@gmail.com" class="btn-ghost">Email</a>
             </div>
           </div>
         </aside>
@@ -159,7 +160,7 @@
         <h2 style="margin-top:0">Contact</h2>
         <p class="muted">Want to work together or view more projects? Reach out — I reply fast.</p>
         <div style="margin-top:12px" class="row">
-          <a href="mailto:abdulmujibzubair@gmail.com" class="cta">Email Me</a>
+          <a href="mailto:zubayrtechhub@gmail.com" class="cta">Email Me</a>
           <a href="https://github.com/abdulmujibzubair-hash" target="_blank" class="btn-ghost">GitHub</a>
           <a href="https://www.linkedin.com" target="_blank" class="btn-ghost">LinkedIn</a>
           <a href="https://wa.me/2349015174769" target="" class="cta">whatsapp</a>
