--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Zubair Abdulmujib — Frontend Developer</title>
   <meta name="description" content="Zubair Abdulmujib Omodolapo — frontend developer building friendly, mobile-responsive websites." />
-  <meta property="og:title" content="Zubair Abdulmujib — Frontend Developer" />
+  <meta property="og:title" content="Zubayr Abdulmujib — Frontend Developer" />
   <meta property="og:description" content="Frontend developer building friendly and mobile-responsive websites." />
   <meta property="og:type" content="website" />
   <meta name="theme-color" content="#0b1020" />
