--- a/index.html
+++ b/index.html
@@ -116,11 +116,26 @@
               <article class="project">
                 <div class="meta">
                   <h3>Opay Website</h3>
-                  <p class="muted">Multi-page opay site used to inform customers about their services. Deployed on Netlify.   <br><a href="https://opayzubair.netlify.app" target="_blank">Live</a> • <a href="https://zubairacademy" target="_blank">Source</a></p>
+                  <p class="muted">Multi-page opay site used to inform customers about their services. Deployed on Netlify.   <br><a href="https://opayzubair.netlify.app" target="_blank">Live</a> • <a href="https://github.com/abdulmujibzubair-hash/flex-design" target="_blank">Source</a></p>
                 </div>
                 <div style="min-width:94px;text-align:right;color:var(--muted)">HTML • CSS</div>
               </article>
 
+              <article class="project">
+                <div class="meta">
+                  <h3>Raha's Treats Website</h3>
+                  <p class="muted">A one-page e-commerce website used to inform customers about their services. Deployed on Netlify.   <br><a href="https://rahatreats.netlify.app" target="_blank">Live</a> • <a href="https://github.com/abdulmujibzubair-hash/raha-s-treats" target="_blank">Source</a></p>
+                </div>
+                <div style="min-width:94px;text-align:right;color:var(--muted)">HTML • CSS</div>
+              </article>
+
+              <article class="project">
+                <div class="meta">
+                  <h3>Olanrewaju Hospital Website</h3>
+                  <p class="muted">Multi-page hospital site used to inform their patients about their services. Deployed on Netlify.   <br><a href="https://zubayrolanrewajuhospital.netlify.app" target="_blank">Live</a> • <a href="https://github.com/abdulmujibzubair-hash/olanrewaju-hospital" target="_blank">Source</a></p>
+                </div>
+                <div style="min-width:94px;text-align:right;color:var(--muted)">HTML • CSS</div>
+              </article>
 
             </div>
           </div>
